test storage local chrome API

--- a/manifest.json
+++ b/manifest.json
@@ -4,14 +4,17 @@
     "description": "A Chrome Extension to allow you to download any Echo 360 Lecture at Warwick",
     "version": "1.0",
     "action": {
-        "default_title": "OOGA BOOGA",
+        "default_title": "Lecture Downloader",
         "default_popup": "popup/popup.html"
     },
     "host_permissions": [
         "<all_urls>"
     ],
     "permissions": [
-        "webRequest"
+        "webRequest",
+        "downloads",
+        "storage",
+        "unlimitedStorage"
     ],
     "background": {
         "service_worker": "service-worker.js"
