new font for button

--- a/manifest.json
+++ b/manifest.json
@@ -36,7 +36,8 @@
     "web_accessible_resources": [
         {
             "resources": [
-                "libs/*"
+                "libs/*",
+                "fonts/*.ttf"
             ],
             "matches": [
                 "<all_urls>"
