--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,16 @@
 {
     "manifest_version": 3,
-    "name": "Warwick Lecture Downloader",
+    "name": "Fetch 360",
+    "icons": {
+        "16": "icons/icon16.png",
+        "32": "icons/icon32.png",
+        "48": "icons/icon48.png",
+        "128": "icons/icon128.png"
+      },
     "description": "A Chrome Extension to allow Warwick students to download any Echo 360 Lecture",
     "version": "1.0",
     "action": {
-        "default_title": "Warwick Lecture Downloader",
+        "default_title": "Fetch 360",
         "default_popup": "popup/popup.html"
     },
     "host_permissions": [
